--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
 	<modules>
 		<module>userDemo</module>
 		<module>userMovieDemo</module>
+		<module>demoapigateway</module>
+		<module>demoEureka</module>
 	</modules>
 
 	<build>
