--- a/userMovieDemo/src/main/resources/application.properties
+++ b/userMovieDemo/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=movie-service
-server.port=8089
+server.port=8081
 spring.data.mongodb.database=movieUserdb
 spring.data.mongodb.uri=mongodb://mongoService:27017/movieUserdb
 server.error.include-message=always
+eureka.client.serviceUrl.defaultZone= http://eureka-service:8761/eureka
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
