--- a/userDemo/src/main/resources/application.properties
+++ b/userDemo/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.error.include-message=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+eureka.client.serviceUrl.defaultZone= http://eureka-service:8761/eureka
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
