--- a/userMovieDemo/src/main/resources/application.properties
+++ b/userMovieDemo/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=movie-service
-server.port=8081
-spring.data.mongodb.database=movieUserdb
-spring.data.mongodb.uri=mongodb://mongoService:27017/movieUserdb
+server.port=9700
+spring.data.mongodb.database=movieUserdata
+spring.data.mongodb.uri=mongodb://localhost:27017/movieUserdata
 server.error.include-message=always
-eureka.client.serviceUrl.defaultZone= http://eureka-service:8761/eureka
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
 eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
+//mongoService
